# data-forge

./: .env.example  .gitignore  .pre-commit-config.yaml  Makefile  README.md  docker-compose.yml  pyproject.toml
backend/: .dockerignore  Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 12e6511c16f3_.py  9e2b463c873f_job_results_cascade_delete.py  b2c0a207fded_transactions_job_id_set_null.py  f49e9527c27f_drop_schema_config_from_jobs.py
backend/app/: config.py  main.py  test_main.py
backend/app/api/: deps.py
backend/app/api/v1/: auth.py  billing.py  dashboard.py  jobs.py  test_auth.py  test_billing.py  test_dashboard.py  test_jobs.py
backend/app/core/: celery_app.py  cost_estimator.py  metrics.py  openrouter.py  result_formatter.py  security.py  test_cost_estimator.py  test_result_formatter.py  test_security.py
backend/app/db/: enums.py  session.py
backend/app/db/models/: __init__.py  job.py  job_file.py  job_result.py  promo_activation.py  promo_code.py  test_models.py  transaction.py  user.py  wallet.py
backend/app/pipeline/: __init__.py  audio_blocks.py  image_blocks.py  postprocess_blocks.py  structure_block.py  test_audio_blocks.py  test_image_blocks.py  test_postprocess_blocks.py  test_structure_block.py  test_text_blocks.py  text_blocks.py  video_blocks.py
backend/app/schemas/: auth.py  billing.py  dashboard.py  jobs.py
backend/app/services/: auth_service.py  billing_service.py  dashboard_service.py  job_service.py  test_billing_service.py  test_job_service.py
backend/app/tasks/: pipeline_runner.py
frontend/: .dockerignore  Dockerfile  api_client.py  app.py  auth.py  pipeline_builder.py  pyproject.toml  test_api_client.py
frontend/.streamlit/: config.toml
frontend/pages/: Analytics.py  Dashboard.py  Edit_Job.py  Job_Detail.py  New_Job.py
monitoring/: prometheus.yml
monitoring/grafana/dashboards/: dataforge.json
monitoring/grafana/provisioning/alerting/: alerts.yml
monitoring/grafana/provisioning/dashboards/: dashboard.yml
monitoring/grafana/provisioning/datasources/: prometheus.yml
