[project]
name = "dataforge"
version = "0.1.0"
description = "Automatic document structuring service"
requires-python = ">=3.12"

[tool.ruff]
target-version = "py312"
line-length = 88
src = ["backend", "frontend"]

[tool.ruff.lint]
select = ["ALL"]

[tool.ruff.lint.per-file-ignores]
"**/tests/**/*.py" = [
    "S101",
    "ANN",
    "D",
    "SLF001",
    "PLR2004",
]
"**/alembic/**/*.py" = [
    "ANN",
    "D",
    "INP001",
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.isort]
known-first-party = ["app"]

[tool.ruff.format]
quote-style = "single"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
