[project]
name = "dataforge-backend"
version = "0.1.0"
description = "DataForge backend service"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.115",
    "uvicorn[standard]>=0.34",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.30",
    "alembic>=1.14",
    "celery[redis]>=5.4",
    "redis>=5.2",
    "pydantic-settings>=2.7",
    "python-jose[cryptography]>=3.3",
    "bcrypt>=4.0",
    "python-multipart>=0.0.20",
    "httpx>=0.28",
    "prometheus-client>=0.21",
    "prometheus-fastapi-instrumentator>=7.0",
    "structlog>=25.1",
    "pillow>=11.0",
    "pydub>=0.25",
    "noisereduce>=3.0",
    "numpy>=2.0",
    "pypdf>=5.0",
    "python-docx>=1.1",
    "openai>=1.58",
    "spacy>=3.8",
    "nltk>=3.9",
    "scikit-learn>=1.6",
]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.26",
    "httpx>=0.28",
    "anyio>=4.7",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["app"]

[tool.mypy]
python_version = "3.12"
mypy_path = "."
ignore_missing_imports = true

[tool.ruff.format]
quote-style = "single"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
