[project]
name = "dataforge-frontend"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "streamlit>=1.41",
    "httpx>=0.28",
    "pandas>=2.2",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-anyio>=0.0.0",
]

[tool.pytest.ini_options]
testpaths = ["."]
python_files = ["test_*.py"]

[tool.ruff.format]
quote-style = "single"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
